--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,14 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "react": "^18.2.0",
-<<<<<<< HEAD
-=======
+    "react-bootstrap": "^2.10.1",
     "react-datepicker": "^6.1.0",
->>>>>>> 8c998f149eb31f3183013e1597db775678e1f39f
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
